test/fail/event-without-action.app
//Property 'onclick' requires an action call or inline action.
application test

  define page root(){
    block[onclick := "gfdfdgd"]{"bla"}
  }